# schuldockbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: publish-ghcr.yml
.pytest-tmp/s05-research-runtime/: state.db
deploy/systemd/: schuldockbot.service
docs/operations/: systemd.md
scripts/: verify_container_compose.py  verify_published_image.py  verify_runtime_dry_run.py
src/schuldockbot/: __init__.py
src/schuldockbot/ingestion/: __init__.py  html_source.py  json_source.py  models.py  normalize.py  source_selector.py
src/schuldockbot/runtime/: __init__.py  config.py  http.py  main.py  service.py
src/schuldockbot/state/: __init__.py  change_detector.py  models.py  sqlite_store.py
src/schuldockbot/talk/: __init__.py  client.py  delivery.py  formatter.py  models.py
tests/fixtures/schuldock/: aktuelle-meldungen.html  issues-cycle2.json  issues.json
tests/integration/: test_runtime_end_to_end.py
tests/unit/ingestion/: test_html_source.py  test_ingestion_contract.py  test_json_source.py  test_normalize.py  test_source_selector.py
tests/unit/runtime/: test_compose_contract.py  test_config.py  test_container_image_contract.py  test_main.py  test_publish_workflow_contract.py  test_service_cycle.py  test_service_unit_contract.py  test_verify_published_image_contract.py
tests/unit/state/: test_change_detector.py  test_sqlite_store.py  test_state_contract.py
tests/unit/talk/: test_client.py  test_delivery_contract.py  test_formatter.py
