[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schuldockbot"
version = "0.1.0"
description = "Schuldock ingestion and notification bot"
requires-python = ">=3.11"
authors = [{ name = "schuldockbot" }]
license = { file = "LICENSE" }
dependencies = []

[project.scripts]
schuldockbot-runtime = "schuldockbot.runtime.main:entrypoint"

[project.urls]
Homepage = "https://github.com/Borega/Schuldockbot"
Repository = "https://github.com/Borega/Schuldockbot"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
